--- a/app/src/main/res/drawable-v24/blue_button.xml
+++ b/app/src/main/res/drawable-v24/blue_button.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:angle="270"
-        android:centerColor="@color/white"
-        android:endColor="@color/white"
-        android:startColor="@color/white" />
+        android:centerColor="@color/bluebd"
+        android:endColor="@color/bluebd"
+        android:startColor="@color/bluebd" />
 
     <corners
         android:radius="48dp"
