--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:background="@color/bluebd">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/etqLogoMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/white_logo" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/etqBienvenida"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/etqLogoMain" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCrearCuenta"
@@ -42,6 +42,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/white_button"
+        android:fontFamily="@font/poppins_medium"
         android:stateListAnimator="@null"
         android:text="@string/crearcuenta"
         android:textColor="@color/bluebd"
@@ -51,13 +52,14 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnCrearCuenta2"
+        android:id="@+id/btnInicarSesion"
         android:layout_width="match_parent"
         android:layout_height="74dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/transparent_white_button"
+        android:fontFamily="@font/poppins_medium"
         android:stateListAnimator="@null"
         android:text="@string/inicarsesion"
         android:textColor="@color/white"
