--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/transparent_white_button"
         android:fontFamily="@font/poppins_medium"
+        android:onClick="entrarLogin"
         android:stateListAnimator="@null"
         android:text="@string/inicarsesion"
         android:textColor="@color/white"
