--- a/app/src/main/res/drawable/edittext_simple.xml
+++ b/app/src/main/res/drawable/edittext_simple.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
-    android:padding="26dp">
+    android:padding="10dp">
 
     <solid android:color="@color/graybd" />
     <corners
-        android:bottomRightRadius="15dp"
-        android:bottomLeftRadius="15dp"
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp" />
+        android:radius="26dp" />
 
 </shape>
