--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".RegisterActivity">
 
     <EditText
-        android:id="@+id/txtContra"
+        android:id="@+id/txtContra3"
         android:layout_width="match_parent"
         android:layout_height="82dp"
         android:layout_marginStart="32dp"
@@ -23,10 +23,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />
+        app:layout_constraintTop_toBottomOf="@+id/txtCorreo3" />
 
     <TextView
-        android:id="@+id/etqContra"
+        android:id="@+id/etqContra3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
@@ -35,12 +35,11 @@
         android:text="@string/contra"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/txtContra"
-        app:layout_constraintTop_toTopOf="@+id/txtContra" />
-
+        app:layout_constraintStart_toStartOf="@+id/txtContra3"
+        app:layout_constraintTop_toTopOf="@+id/txtContra3" />
 
     <ImageView
-        android:id="@+id/imgLogoLogin"
+        android:id="@+id/imgLogoLogin3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -50,7 +49,7 @@
         app:srcCompat="@drawable/blue_logo" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnCrearCuenta3"
+        android:id="@+id/btnRegistrar"
         android:layout_width="match_parent"
         android:layout_height="74dp"
         android:layout_marginStart="16dp"
@@ -58,9 +57,8 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/blue_button"
         android:fontFamily="@font/poppins_medium"
-        android:onClick="entrarInicio"
         android:stateListAnimator="@null"
-        android:text="@string/inicarsesion"
+        android:text="@string/registrarusuario"
         android:textColor="@color/white"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,20 +66,20 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/etqIniciarSesion"
+        android:id="@+id/etqRegistrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/poppins_medium"
-        android:text="@string/inicarsesion"
+        android:text="@string/registrarusuario"
         android:textColor="#000000"
         android:textSize="37dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgLogoLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/imgLogoLogin3" />
 
     <EditText
-        android:id="@+id/txtCorreo"
+        android:id="@+id/txtCorreo3"
         android:layout_width="match_parent"
         android:layout_height="82dp"
         android:layout_marginStart="32dp"
@@ -95,12 +93,12 @@
         android:paddingTop="20dp"
         android:paddingRight="19dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etqIniciarSesion" />
+        app:layout_constraintTop_toBottomOf="@+id/etqRegistrar" />
 
     <TextView
-        android:id="@+id/etqEmail"
+        android:id="@+id/etqEmail3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
@@ -109,17 +107,7 @@
         android:text="@string/correo"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/txtCorreo"
-        app:layout_constraintTop_toTopOf="@+id/txtCorreo" />
-
-    <CheckBox
-        android:id="@+id/chkGuardarSesion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:text="@string/guardarS"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtContra" />
+        app:layout_constraintStart_toStartOf="@+id/txtCorreo3"
+        app:layout_constraintTop_toTopOf="@+id/txtCorreo3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
