--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="bluebd">#2D26D9</color>
     <color name="graybd">#E8E8E8</color>
+    <color name="blueLight">#F8F7FE</color>
+    <color name="grenLight">#F8FDF7</color>
+    <color name="grayLight">#7E7E7E</color>
 </resources>
