--- a/app/src/main/res/layout/lista_contactos.xml
+++ b/app/src/main/res/layout/lista_contactos.xml
@@ -6,10 +6,11 @@
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
     app:cardCornerRadius="12dp"
-    app:cardElevation="0dp">
+    app:cardElevation="0dp"
+    >
 
     <LinearLayout
-        android:id="@+id/linearT"
+        android:id="@+id/layoutContacts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
@@ -22,10 +23,11 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cardImageT"
+                android:id="@+id/cardImageC"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:backgroundTint="@color/blueLight"
@@ -33,7 +35,7 @@
                 app:cardElevation="0dp">
 
                 <ImageView
-                    android:id="@+id/icnImage"
+                    android:id="@+id/icnContactType"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_alignParentStart="true"
@@ -48,14 +50,14 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="4dp"
-                android:paddingLeft="10dp"
                 android:layout_marginTop="2dp"
-                android:layout_toEndOf="@+id/cardImageT"
-                android:layout_toRightOf="@+id/cardImageT"
-                android:orientation="vertical">
+                android:layout_toEndOf="@+id/cardImageC"
+                android:layout_toRightOf="@+id/cardImageC"
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
 
                 <TextView
-                    android:id="@+id/txtTituloT"
+                    android:id="@+id/txtAliasC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_semibold"
@@ -64,7 +66,16 @@
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/txtSubtituloT"
+                    android:id="@+id/txtNombreC"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins"
+                    android:text="Transferencia"
+                    android:textColor="@color/grayLight"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/txtNoCuentaC"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins"
@@ -73,18 +84,6 @@
                     android:textSize="12sp" />
 
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/txtValorT"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="6dp"
-                android:fontFamily="@font/poppins_semibold"
-                android:text="$ 2,000"
-                android:textAlignment="textEnd"
-                android:textColor="@color/black" />
 
         </RelativeLayout>
     </LinearLayout>
