--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/itmUser"
-        android:title="usuario"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_contacts"
-        />
+        android:title="usuario"
+        android:visible="true"
+        app:showAsAction="ifRoom" />
 
 </menu>
