--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -153,7 +153,7 @@
                     android:layout_marginBottom="32dp"
                     android:background="@drawable/edittext_simple"
                     android:ems="10"
-                    android:hint="@string/iAlias"
+                    android:hint="@string/iTipoCuenta"
                     android:inputType="textPersonName"
                     android:paddingLeft="19dp"
                     android:paddingTop="20dp"
@@ -172,7 +172,7 @@
                     android:layout_marginStart="18dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="@string/cuenta"
+                    android:text="Tipo de cuenta"
                     android:textColor="#000000"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="@+id/spTipoCunetaNC"
