--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
         app:srcCompat="@drawable/blue_logo" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnCrearCuenta3"
+        android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="74dp"
         android:layout_marginStart="16dp"
@@ -113,11 +113,12 @@
         app:layout_constraintTop_toTopOf="@+id/txtCorreo" />
 
     <CheckBox
-        android:id="@+id/chkGuardarSesion"
+        android:id="@+id/chkGuardar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/poppins"
         android:text="@string/guardarS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtContra" />
