--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -144,7 +144,7 @@
                     app:layout_constraintTop_toTopOf="@+id/txtNoCuentaNC" />
 
                 <EditText
-                    android:id="@+id/txtRepetirContraR"
+                    android:id="@+id/txtRepetirContraNC"
                     android:layout_width="match_parent"
                     android:layout_height="82dp"
                     android:layout_marginStart="32dp"
@@ -171,8 +171,8 @@
                     android:text="@string/contra"
                     android:textColor="#000000"
                     android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="@+id/txtRepetirContraR"
-                    app:layout_constraintTop_toTopOf="@+id/txtRepetirContraR" />
+                    app:layout_constraintStart_toStartOf="@+id/txtRepetirContraNC"
+                    app:layout_constraintTop_toTopOf="@+id/txtRepetirContraNC" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -188,6 +188,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/blue_button"
         android:fontFamily="@font/poppins_medium"
+        android:onClick="registrarUsuario"
         android:stateListAnimator="@null"
         android:text="@string/registrarusuario"
         android:textColor="@color/white"
