--- a/app/src/main/res/layout/activity_user_contact.xml
+++ b/app/src/main/res/layout/activity_user_contact.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txtNombreUsuarioU"
+        android:id="@+id/etqNombreUsuarioU"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbarUser" />
 
     <TextView
-        android:id="@+id/txtNombreUsuarioU2"
+        android:id="@+id/etqCorreoU"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -47,21 +47,22 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuarioU" />
+        app:layout_constraintTop_toBottomOf="@+id/etqNombreUsuarioU" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCerrarSesion"
         android:layout_width="match_parent"
         android:layout_height="74dp"
-        android:paddingLeft="20dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/mid_radious_button"
         android:drawableLeft="@drawable/ic_logout"
         android:fontFamily="@font/poppins_medium"
+        android:onClick="cerrar"
+        android:paddingLeft="20dp"
         android:stateListAnimator="@null"
-        android:text="@string/inicarsesion"
+        android:text="@string/cerrarSesion"
         android:textColor="@color/red"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
