--- a/app/src/main/res/layout/lista_contactos.xml
+++ b/app/src/main/res/layout/lista_contactos.xml
@@ -93,7 +93,8 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
                 android:layout_marginEnd="0dp"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="#00000000"
+                android:visibility="visible"
                 app:srcCompat="@drawable/ic_icons8_menu_vertical_1" />
 
         </RelativeLayout>
