--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -112,7 +112,7 @@
                     app:layout_constraintTop_toTopOf="@+id/txtNombreNC" />
 
                 <EditText
-                    android:id="@+id/txtNoCuentaNC"
+                    android:id="@+id/txtCorreoNC"
                     android:layout_width="match_parent"
                     android:layout_height="82dp"
                     android:layout_marginStart="32dp"
@@ -120,7 +120,7 @@
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/edittext_simple"
                     android:ems="10"
-                    android:hint="@string/iNoCuenta"
+                    android:hint="@string/iCorreo"
                     android:inputType="textPassword"
                     android:paddingLeft="19dp"
                     android:paddingTop="20dp"
@@ -137,11 +137,11 @@
                     android:layout_marginStart="18dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="@string/cuenta"
+                    android:text="@string/correo"
                     android:textColor="#000000"
                     android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="@+id/txtNoCuentaNC"
-                    app:layout_constraintTop_toTopOf="@+id/txtNoCuentaNC" />
+                    app:layout_constraintStart_toStartOf="@+id/txtCorreoNC"
+                    app:layout_constraintTop_toTopOf="@+id/txtCorreoNC" />
 
                 <Spinner
                     android:id="@+id/spTipoCunetaNC"
@@ -162,7 +162,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtNoCuentaNC"
+                    app:layout_constraintTop_toBottomOf="@+id/txtCorreoNC"
                     app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
