--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -112,7 +112,7 @@
                     app:layout_constraintTop_toTopOf="@+id/txtNombreNC" />
 
                 <EditText
-                    android:id="@+id/txtNoCuentaNC"
+                    android:id="@+id/txtCorreoNC"
                     android:layout_width="match_parent"
                     android:layout_height="82dp"
                     android:layout_marginStart="32dp"
@@ -140,8 +140,8 @@
                     android:text="@string/contra"
                     android:textColor="#000000"
                     android:textSize="16sp"
-                    app:layout_constraintStart_toStartOf="@+id/txtNoCuentaNC"
-                    app:layout_constraintTop_toTopOf="@+id/txtNoCuentaNC" />
+                    app:layout_constraintStart_toStartOf="@+id/txtCorreoNC"
+                    app:layout_constraintTop_toTopOf="@+id/txtCorreoNC" />
 
                 <EditText
                     android:id="@+id/txtRepetirContraNC"
@@ -159,7 +159,7 @@
                     android:paddingRight="19dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtNoCuentaNC" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtCorreoNC" />
 
                 <TextView
                     android:id="@+id/etqContra2"
