--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -174,6 +174,37 @@
                     app:layout_constraintStart_toStartOf="@+id/txtRepetirContraNC"
                     app:layout_constraintTop_toTopOf="@+id/txtRepetirContraNC" />
 
+                <EditText
+                    android:id="@+id/txtDineroNC"
+                    android:layout_width="match_parent"
+                    android:layout_height="82dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="32dp"
+                    android:background="@drawable/edittext_simple"
+                    android:ems="10"
+                    android:hint="Dinero con el que desea abrir la cuenta"
+                    android:inputType="textPassword"
+                    android:paddingLeft="19dp"
+                    android:paddingTop="20dp"
+                    android:paddingRight="19dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRepetirContraNC" />
+
+                <TextView
+                    android:id="@+id/etqDinero"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginTop="12dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Dinero"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="@+id/txtDineroNC"
+                    app:layout_constraintTop_toTopOf="@+id/txtDineroNC" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
