--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/itmUser"
-        android:icon="@drawable/ic_contacts"
+        android:icon="@drawable/ic_user_icon"
         android:title="usuario"
         android:visible="true"
         app:showAsAction="ifRoom" />
